--- a/main.css
+++ b/main.css
@@ -148,6 +148,17 @@ dd.open {
   opacity: 1;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 @media screen and (min-width: 650px) {
   body {
     background-image: url("./assets/images/background-pattern-desktop.svg");
